fix the layout issues, now everything works great

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,15 @@ body {
   font-size: 1.8rem;
   line-height: 1.3;
   color: var(--color-body);
-  overflow-x: hidden;
+}
+
+html, body {
+  overflow-x: hidden !important;
+  max-width: 100%;
+}
+
+img {
+  width: 100%;
 }
 
 h1,h2,h3 {
@@ -494,9 +502,6 @@ a {
 }
 
 .block__image {
-  max-width: 100%;
-  max-height: 75vh;
-  display: block;
   margin: 2rem auto;
 }
 
@@ -517,7 +522,7 @@ a {
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 6rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 97%);
 }
 
 .block--skewed-left {
@@ -534,6 +539,10 @@ a {
   .block{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .block--skewed-right {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 94%);
   }
 }
 
@@ -553,7 +562,6 @@ a {
 }
 
 .banner__image {
-  width: 100%;
   margin-top: 5rem;
   align-self: center;
 }
@@ -595,8 +603,7 @@ a {
   margin: 1rem 0;
 }
 
-.feature__image, .feature__image-container {
-  width: 100%;
+.feature__image-container {
   display: block;
   align-self: center;
 }
@@ -624,12 +631,15 @@ a {
 
 /* Quotes */
 .quote {
-  font-size: 1.8rem;
   font-style: italic;
   color: var(--color-body-darker);
   line-height: 1.3;
-  margin-left: 1.9rem;
-  margin-right: 1.9rem;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.quote__text {
+  font-size: 1.8rem;
 }
 
 .quote__text::before {
@@ -657,14 +667,10 @@ a {
 .quote__line {
   position: relative;
   bottom: 10px;
+  width: 25px;
 }
 
 @media screen and (min-width: 400px) {
-  .quote {
-    margin-right: 40px;
-    margin-left: 40px;
-  }
-
   .quote__text {
     font-size: 2.5rem;
   }
@@ -676,13 +682,31 @@ a {
   .quote__company {
     font-size: 2rem;
   }
+
+  .quote__line {
+    width: 40px
+  }
+}
+@media screen and (min-width: 500px) {
+  .quote {
+    margin-right: 40px;
+    margin-left: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .quote__text {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (min-width: 950px) {
+  .quote__text {
+    font-size: 2.2rem;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-  .quote {
-    font-size: 2rem;
-  }
-
   .quote__author {
     font-size: 2.4rem;
   }
@@ -702,32 +726,38 @@ a {
 
 .testimonial {
   padding: 2rem;
+  padding-bottom: 0;
 }
 
-.testimonial__image {
+.testimonial__image-container {
   position: relative;
 }
 
-.testimonial__image img {
-  width: 100%;
-}
-
-.testimonial__image > .icon-container {
+.testimonial__image-container > .icon-container {
   position: absolute;
   top: 3rem;
   right: -20px;
+  width: 40px;
+  height: 40px;
 }
 
 @media screen and (min-width: 400px) {
   .testimonial {
     padding: 3rem;
+    padding-bottom: 0;
   }
-  .testimonial__image > .icon-container {
+  .testimonial__image-container > .icon-container {
     right: -32px;
+    width: 64px;
+    height: 64px;
   }
 }
 
 @media screen and (min-width: 768px) {
+  .testimonial {
+    padding-bottom: 3rem;
+  }
+
   .testimonial .quote, 
   .testimonial .quote__author {
     font-size: 2.1rem;
